fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif !important;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 .d-none {
@@ -73,7 +74,7 @@ nav img {
 }
 
 .navbar input {
-    margin-right: 50px;
+    margin-right: 40px;
     cursor: pointer;
 }
 
